--- a/action.yml
+++ b/action.yml
@@ -16,6 +16,14 @@ inputs:
     description: 'Action will fail if changes to dependencies are made.'
     required: false
     default: true
+  workspace:
+    description: 'Define the xcworkspace name if being used in place of xcodeproj'
+    required: false
+    default: ''
+  scheme:
+    description: 'Define the scheme to use. This is required when workspace is defined.'
+    required: false
+    default: ''
 outputs:
   dependenciesChanged:
     description: 'A bool (true or false) indicating whether changes were made to the dependencies.'
@@ -28,5 +36,5 @@ runs:
     - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
       shell: bash
     - id: script
-      run: entrypoint.sh -a "${{ inputs.directory }}" -b "${{ inputs.forceResolution }}" -c "${{ inputs.failWhenOutdated }}"
+      run: entrypoint.sh -a "${{ inputs.directory }}" -b "${{ inputs.forceResolution }}" -c "${{ inputs.failWhenOutdated }}" -d "${{ inputs.workspace }}" -e "${{ inputs.scheme }}"
       shell: bash
